made new list creation link a bit more visible, as a stopgap until we solve that problem better.

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -19,6 +19,10 @@
 a {color:#808080;}
 a:hover {background-color:#b0b0b0;}
 
+#general_actions {
+  padding-bottom:10px;
+}
+
 h1 {
   font-size:30pt;
   font-weight:700;
